Add listContacts API method WT-1552
