# src/main/resources/com/sonicle/webtop/contacts/openapi-v2.json
@@ -1021,6 +1021,58 @@
           }
         },
         "description": "Adds new contact into specified category."
+      },
+            "get": {
+        "summary": "List contacts",
+        "operationId": "listContacts",
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ContactsResult"
+                }
+              }
+            }
+          },
+          "405": {
+            "description": "Not allowed"
+          }
+        },
+        "description": "Returns a list of contacts from specified categories.\n\nParam *_filter* supports the following fields in RSQL query conditions:\nid, createdAt, updatedAt, title, displayName, firstName, lastName, nickname, mobile, pager1, pager2, email1, email2, email3, im1, im2, im3, workTelephone1, workTelephone2, workFax, homeTelephone1, homeTelephone2, homeFax, workAddress, workPostalCode, workCity, workState, workCountry, homeAddress, homePostalCode, homeCity, homeState, homeCountry, otherAddress, otherPostalCode, otherCity, otherState, otherCountry, company, companyId, function, department, manager, assistant, assistantTelephone, partner, birthday, anniversary, url, taxCode, vatNumber, eInvoicingCode, notes, tagId\n\nWith the addition of the following composite fields that helps filtering:\n* anyName: matches displayName || firstName || lastName\n* anyEmail: matches email1 || email2 || email3\n* anyPhone: matches mobile || pager1 || pager2 || workTelephone1 || workTelephone2 || workFax || homeTelephone1 || homeTelephone2 || homeFax\n* anyWorkPhone: matches workTelephone1 || workTelephone2 || workFax\n* anyHomePhone: matches homeTelephone1 || homeTelephone2 || homeFax\n\nParam *_select* supports the following fields:\ndisplayName, title, firstName, lastName, nickname, mobile, pager1, pager2, email1, email2, email3, im1, im2, im3, workAddress, workPostalCode, workCity, workState, workCountry, workTelephone1, workTelephone2, workFax, homeAddress, homePostalCode, homeCity, homeState, homeCountry, homeTelephone1, homeTelephone2, homeFax, otherAddress, otherPostalCode, otherCity, otherState, otherCountry, taxCode, vatNumber, eInvoicingCode",
+        "parameters": [
+          {
+            "schema": {
+              "type": "string"
+            },
+            "in": "query",
+            "name": "category_ids",
+            "description": "List (comma-separated) of category IDs whose contacts should be included in the results.",
+            "required": true
+          },
+          {
+            "$ref": "#/components/parameters/_filter"
+          },
+          {
+            "$ref": "#/components/parameters/_select"
+          },
+          {
+            "$ref": "#/components/parameters/_orderBy"
+          },
+          {
+            "$ref": "#/components/parameters/_pageNo"
+          },
+          {
+            "$ref": "#/components/parameters/_pageSize"
+          },
+          {
+            "$ref": "#/components/parameters/_returnCount"
+          }
+        ],
+        "tags": [
+          "me"
+        ]
       }
     },
     "/me/contacts/{contact_id}": {
